--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ importlib-resources==6.0.1
 ipykernel==6.25.1
 ipython==8.12.2
 jedi==0.19.0
+joblib==1.3.2
 jupyter-client==8.3.0
 jupyter-core==5.3.1
 kiwisolver==1.4.4
@@ -21,6 +22,7 @@ matplotlib-inline==0.1.6
 nest-asyncio==1.5.7
 numpy==1.24.4
 packaging==23.1
+pandas==2.0.3
 parso==0.8.3
 pickleshare==0.7.5
 Pillow==10.0.0
@@ -31,12 +33,17 @@ pure-eval==0.2.2
 Pygments==2.16.1
 pyparsing==3.0.9
 python-dateutil==2.8.2
+pytz==2023.3
 pywin32==306
 pyzmq==25.1.0
+scikit-learn==1.3.0
+scipy==1.10.1
 six==1.16.0
 stack-data==0.6.2
+threadpoolctl==3.2.0
 tornado==6.3.2
 traitlets==5.9.0
 typing-extensions==4.7.1
+tzdata==2023.3
 wcwidth==0.2.6
 zipp==3.16.2
