--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ pywin32==306
 pyzmq==25.1.0
 scikit-learn==1.1.3
 scipy==1.10.1
+seaborn==0.12.2
 six==1.16.0
 stack-data==0.6.2
 threadpoolctl==3.2.0
