--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,20 @@
 absl-py==1.4.0
+array-record==0.4.0
 asttokens==2.2.1
 astunparse==1.6.3
 backcall==0.2.0
 cachetools==5.3.1
 certifi==2023.7.22
 charset-normalizer==3.2.0
+click==8.1.7
 colorama==0.4.6
 comm==0.1.4
 contourpy==1.1.0
 cycler==0.11.0
 debugpy==1.6.7.post1
 decorator==5.1.1
+dm-tree==0.1.8
+etils==1.3.0
 executing==1.2.0
 flatbuffers==23.5.26
 fonttools==4.42.0
@@ -18,6 +22,7 @@ gast==0.4.0
 google-auth==2.22.0
 google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
+googleapis-common-protos==1.60.0
 grpcio==1.57.0
 h5py==3.9.0
 idna==3.4
@@ -46,8 +51,9 @@ parso==0.8.3
 pickleshare==0.7.5
 Pillow==10.0.0
 platformdirs==3.10.0
+promise==2.3
 prompt-toolkit==3.0.39
-protobuf==4.24.2
+protobuf==3.20.3
 psutil==5.9.5
 pure-eval==0.2.2
 pyasn1==0.5.0
@@ -69,12 +75,16 @@ stack-data==0.6.2
 tensorboard==2.13.0
 tensorboard-data-server==0.7.1
 tensorflow==2.13.0
+tensorflow-datasets==4.9.2
 tensorflow-estimator==2.13.0
 tensorflow-intel==2.13.0
 tensorflow-io-gcs-filesystem==0.31.0
+tensorflow-metadata==1.14.0
 termcolor==2.3.0
 threadpoolctl==3.2.0
+toml==0.10.2
 tornado==6.3.2
+tqdm==4.66.1
 traitlets==5.9.0
 typing_extensions==4.5.0
 tzdata==2023.3
